# cmake_cxx_selfid

./: CMakeLists.txt  selfid_test.cc
cmake_selfid/: selfid.cmake  selfid.h  selfid.sh
